testing/tests/ui/excessive_nesting.stderr
error: your template code is too deeply nested, or last expression is too complex
       failed to parse template source at row 14, column 42 near:
       "%}{%if 1%}{%if 1%}{%if 1%}{%if 1%}{%if 1"...
 --> tests/ui/excessive_nesting.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
